# ini-parser

./: Cargo.toml  README.md  makefile
examples/: test.ini
src/: ini_file.rs  ini_grammar.pest  lib.rs  main.rs  parser.rs
tests/: basic_tests.rs  error_tests.rs
