[package]
name = "ini-parser"
version = "0.1.0"
authors = ["Oleksandr Prokhorov <oleksandr.prokhorov@ukma.edu.ua>"]
edition = "2021"
description = "This tool was developed as a part of the Rust course at National University of \"Kyiv-Mohyla Academy\"."
license = "MIT"


[dependencies]
pest = "2.1"
pest_derive = "2.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
thiserror = "2.0.3"
anyhow = "1.0"
